test/src/e2e_vm_tests/test_programs/should_fail/arith_overflow/u32_sub_underflow/src/main.sw
script;

fn main() -> bool {
    let a: u32 = u32::min();
    let b: u32 = 1;

    let result: u32 = a - b;
    log(result);

    true
}
